fixed all the problems. The problem was when I opened the modal window, other buttons behind the window were available. This was because that I used position declaration. After I erased 'position: relative', I could solve this problem.

--- a/keeper-app/src/components/Modal/Modal.css
+++ b/keeper-app/src/components/Modal/Modal.css
@@ -1,5 +1,6 @@
-.buttonLocation {
-  padding-left: 1000px;
+#buttonLocation {
+  display: flex;
+  justify-content: space-between;
 }
 
 .modalButton {
@@ -9,6 +10,7 @@
   background-color: #f1f1f1;
   margin-right: 10px;
   border: 0;
+  cursor: pointer;
 }
 
 .modal,
@@ -48,4 +50,14 @@
 
 body.active-modal {
   overflow-y: hidden;
+}
+
+.btn-modal {
+  float: right;
+  color: #f5ba13;
+  border: none;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+  outline: none;
 }
